# Applied-ML

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
Baseline Model/: CNN_training.ipynb  FER_baseline_model_weights.pth
Facial_Expression_Recognition/: api.py  train.py
Facial_Expression_Recognition/app/: config.py  main.py
Facial_Expression_Recognition/app/ml/: loader.py  registry.py
Facial_Expression_Recognition/app/routes/: __init__.py  health.py  models.py
Facial_Expression_Recognition/app/schemas/: health.py  models.py
Facial_Expression_Recognition/data/: data.py
Facial_Expression_Recognition/features/: ExpW_preprocessor.py  preprocessing.py
Facial_Expression_Recognition/models/: cnn.py  effnet.py
Facial_Expression_Recognition/training/: trainer.py
Preprocessing/: 1_data_preprocessing_and_stratification.py
data/: ADD_SAMPLEDATA.txt
docker/: Dockerfile  pyproject_docker.toml
models/: baseline_cnn_best_weights.pth  cnn.pth
tests/: test_main.py
