[project]
name = "applied-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"

dependencies = [
    "fastapi>=0.136.3",
    "kagglehub<1.0.0",
    "mtcnn>=1.0.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "py7zr>=1.1.0",
    "python-multipart>=0.0.29",
    "ruff>=0.15.15",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.48.0",
    "torch>=2.2.0; sys_platform == 'darwin'",
    "torchvision>=0.17.0; sys_platform == 'darwin'",
    "torch==2.12.0+cu126; sys_platform != 'darwin'",
    "torchvision==0.27.0+cu126; sys_platform != 'darwin'",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" }
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" }
]

[tool.ruff]

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I", "B", "UP"]
ignore = ["N999"]
